# ballast-pac

./: .gitignore  Cargo.toml  README.md
ballast-hpc-pac/: Cargo.toml  HPC.svd  README.md  update.sh
ballast-hpc-pac/patches/: HPC.yaml
ballast-hpc-pac/src/: dsp.rs  hpc.rs  lib.rs  mpc.rs  sysctrl.rs  tlp.rs
ballast-hpc-pac/src/ai/: cacc.rs  cdma.rs  cfgrom.rs  csc.rs  glb.rs  mcif.rs  pdp.rs  pdp_rdma.rs  sdp.rs
ballast-hpc-pac/src/ai/cacc/: d_clip_cfg.rs  d_cya.rs  (+3 more)
ballast-hpc-pac/src/dsp/: control_registers.rs  processor_info_registers.rs
ballast-hpc-pac/src/ethernet/: mac_registers.rs
ballast-hpc-pac/src/hpc/: clint.rs  cluster_config.rs  l2_config.rs  timer.rs
ballast-hpc-pac/src/mpc/: soc_control.rs  soc_event_generator.rs  udma.rs
ballast-hpc-pac/src/sysctrl/: advanced_timer.rs  boot_config.rs  eth_pll.rs  event_interrupt_unit.rs  hpc_pll.rs  pulp_pll.rs  so_c_control.rs  soc_control.rs  topperiph_pll.rs  udma.rs
ballast-hpc-pac/src/tlp/: apb_software_irq.rs  c2c_remap.rs  ema.rs
ballast-hpc-pac/tests/: addresses_match_platform.rs
ballast-mpc-pac/: Cargo.toml  MPC.svd  README.md  ballast_CV32E40P.svd  update.sh
ballast-mpc-pac/patches/: MPC.yaml  ballast_CV32E40P.yaml
ballast-mpc-pac/src/: ai.rs  ethernet.rs  lib.rs  mpc.rs  sysctrl.rs  tlp.rs
ballast-mpc-pac/src/ai/: cacc.rs  cdma.rs  sdp.rs  sdp_rdma.rs
ballast-mpc-pac/src/dsp/: bus_trace_registers.rs  processor_info_registers.rs  status_registers.rs
ballast-mpc-pac/src/ethernet/: dma_registers.rs  mdio.rs
ballast-mpc-pac/src/hpc/: clint.rs  cluster_config.rs  plic.rs  timer.rs
ballast-mpc-pac/src/mpc/: event_interrupt_unit.rs  gpio.rs  soc_event_generator.rs  udma.rs
ballast-mpc-pac/src/sysctrl/: advanced_timer.rs  ai_pll.rs  boot_config.rs  eth_pll.rs  gpio.rs  inter_pll.rs  sdio.rs  soc_control.rs  soc_control_tta_pll.rs  soc_event_generator.rs  udma.rs
ballast-mpc-pac/src/tlp/: apb_software_irq.rs  c2c_remap.rs  global_intr_router.rs  pad_config.rs
ballast-mpc-pac/tests/: addresses_match_platform.rs
ballast-sysctrl-pac/: Cargo.toml  README.md  SysCtrl.svd  update.sh
ballast-sysctrl-pac/patches/: Ibex_RV32EC.yaml  SysCtrl.yaml
ballast-sysctrl-pac/src/: ai.rs  dsp.rs  ethernet.rs  hpc.rs  lib.rs  mpc.rs  sysctrl.rs  tlp.rs
ballast-sysctrl-pac/src/ai/: cacc.rs  cdma.rs  cfgrom.rs  cmac_a.rs  cmac_b.rs  csc.rs  glb.rs  mcif.rs  pdp.rs  pdp_rdma.rs  sdp.rs  sdp_rdma.rs
ballast-sysctrl-pac/src/dsp/: bus_trace_registers.rs
ballast-sysctrl-pac/src/ethernet/: dma_registers.rs  mac_registers.rs  mdio.rs
ballast-sysctrl-pac/src/hpc/: clint.rs  cluster_config.rs  plic.rs
ballast-sysctrl-pac/src/mpc/: advanced_timer.rs  event_interrupt_unit.rs  gpio.rs  soc_control.rs  timer.rs
ballast-sysctrl-pac/src/sysctrl/: c2c_pll.rs  gpio.rs  inter_pll.rs  pulp_pll.rs  soc_event_generator.rs  topperiph_pll.rs
ballast-sysctrl-pac/src/tlp/: global_intr_router.rs  pad_config.rs
ballast-sysctrl-pac/tests/: addresses_match_platform.rs
(+2193 files in other folders)
