[package]
authors = ["Henri Lunnikivi <henri.lunnikivi@tuni.fi>, Esko Pekkarinen <esko.pekkarinen@tuni.fi>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for HPC subsystem of Ballast SoC"
edition = "2018"
keywords = ["ballast", "ibex", "register", "peripheral", "generated"]
name = "ballast-hpc-pac"
version = "0.2.0"

[dependencies]
bare-metal = "1.0"
riscv = "0.9"
vcell = "0.1"

[dependencies.riscv-rt]
optional = true
version = "0.9"

[features]
rt = ["riscv-rt"]
