[package]
authors = ["Henri Lunnikivi <henri.lunnikivi@tuni.fi>, Esko Pekkarinen <esko.pekkarinen@tuni.fi>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for System Control CPU subsystem of Ballast SoC"
edition = "2018"
keywords = ["ballast", "ibex", "register", "peripheral", "generated"]
name = "ballast-sysctrl-pac"
version = "0.2.1"

[dependencies]
bare-metal = { workspace = true }
vcell = { workspace = true }
riscv = { workspace = true }
riscv-rt = { workspace = true, optional = true }

[features]
rt = ["riscv-rt"]
